# bgen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: environment.cmake  modules.cmake
extra/: build-libclang.sh
extra/vs/: bgen.natvis
modules/bgen/: CMakeLists.txt  bgen_config.h.in
modules/bgen/include/: bgen.h
modules/bgen/src/: bgen.cpp
modules/bgen_clang/: CMakeLists.txt
modules/bgen_clang/include/: bgen_clang.h  bgen_clang_driver.h  bgen_clang_parser.h  bgen_clang_tools.h  bgen_clang_visitor.h
modules/bgen_clang/src/: bgen_clang.cpp  bgen_clang_driver.cpp  bgen_clang_parser.cpp  bgen_clang_tools.cpp  bgen_clang_visitor.cpp
modules/bgen_core/: CMakeLists.txt
modules/bgen_core/include/: bgen_clang.h  bgen_clang_handlers.h  bgen_clang_type_maker.h  bgen_code_map.h  bgen_common.h  bgen_common_indexed_ptr.h  bgen_common_indexed_vector.h  bgen_common_pool.h  bgen_common_small_vector.h  bgen_common_vector_ptr.h  bgen_context.h  bgen_core.h  bgen_dependency.h  bgen_details.h  bgen_error_status.h  bgen_gen_cpp.h  bgen_gen_elements.h  bgen_gen_file.h  bgen_gen_inline_source.h  bgen_indexed_vector.h  bgen_interpreter.h  bgen_logger.h  bgen_parameters.h  bgen_parser_cursor.h  bgen_parser_cursor_actions.h  bgen_parser_cursor_type.h  bgen_parser_driver.h  bgen_parser_element.h  bgen_parser_source_map.h  bgen_parser_struct.h  bgen_parser_type.h  bgen_parser_type_actions.h  bgen_parser_visitor.h  bgen_plugin.h  bgen_processor.h  bgen_source_code_map.h  bgen_source_dependency.h  bgen_source_element.h  bgen_source_info.h  bgen_source_map.h  (+12 more)
modules/bgen_core/src/: bgen_clang_handlers.cpp  bgen_clang_type_maker.cpp  bgen_code_map.cpp  bgen_core.cpp  bgen_dependency.cpp  bgen_error_status.cpp  bgen_gen_cpp.cpp  bgen_gen_elements.cpp  bgen_gen_file.cpp  bgen_logger.cpp  bgen_parameters.cpp  bgen_parser_cursor.cpp  bgen_parser_cursor_actions.cpp  bgen_parser_struct.cpp  bgen_parser_type_actions.cpp  bgen_parser_visitor.cpp  bgen_plugin.cpp  bgen_processor.cpp  bgen_source_dependency.cpp  bgen_source_info.cpp  bgen_source_processor.cpp  bgen_source_struct_info.cpp  bgen_struct_info.cpp  bgen_system.cpp  bgen_system_include_paths.cpp  bgen_type_info.cpp  bgen_type_map.cpp  bgen_visitor.cpp
modules/bgen_core/test/: CMakeLists.txt  bgen_clang_handlers_test.cpp  bgen_code_map_test.cpp  bgen_error_status_test.cpp  main.cpp  unit_small_vector.cpp  unit_status.cpp
modules/casabgen/: CMakeLists.txt
modules/casabgen/include/: bgen_casa_common.h  bgen_casa_cpp_generation.h  bgen_casa_generation.h  bgen_casa_js_generation.h  bgen_casa_module.h  bgen_casa_validation.h
modules/casabgen/resources/casablanca/: js_boilerplate.txt  listener_boilerplate.txt  parser_boilerplate.txt
modules/casabgen/src/: bgen_casa_common.cpp  bgen_casa_cpp_generation.cpp  bgen_casa_generation.cpp  bgen_casa_js_generation.cpp  bgen_casa_module.cpp  bgen_casa_validation.cpp
modules/javabgen/include/: bgen_gen_java_client.h  bgen_java_module.h
modules/javabgen/src/: bgen_gen_java_client.cpp  bgen_java_module.cpp
